frontend/editor.css
/* ... */
pluto-cell.depends_on_disabled_cells > pluto-output,
pluto-cell.running_disabled > pluto-output {
    opacity: 0.3;
}

pluto-cell.running_disabled > pluto-output {
    background-color: rgba(139, 139, 139, 0.25);
}

.scroll_y {
    overflow-y: auto;
    max-height: 80vh;
}

pluto-output:focus {
    outline: none;
}

pluto-output:not(.rich_output) {
    display: flex;
    flex-wrap: wrap;
    padding-top: 3px;
    padding-bottom: 3px;
}

pluto-output > assignee {
    font-family: JuliaMono, monospace;
    font-size: 0.75rem;
    font-variant-ligatures: none;
}

pluto-output > assignee::after {
    content: "\a0=\a0";
    opacity: 0.6;
}

pluto-output > assignee:empty {
    display: none;
}

pluto-output > div {
    flex-shrink: 0;
    overflow-y: hidden;
}

pluto-output div.raw-html-wrapper {
    display: contents;
}

pluto-output:not(.rich_output) > div > pre {
    display: flex;
}

/* as embedded display: */

pluto-display > div {
    display: inline-block;
}
/* SELECTION */

pluto-cell.selected {
    background: rgba(40, 78, 189, 0.24);
    border-radius: 0 3px 3px 0;
}

pluto-cell.selected > pluto-input > div.CodeMirror,
pluto-cell.selected > pluto-output {
    opacity: 0.7;
}

main {
    cursor: vertical-text;
}
pluto-cell {
    cursor: auto;
}

/* SCROLLBAR FIREFOX */

pluto-output > div {
    scrollbar-width: thin;
    scrollbar-color: transparent transparent;
}

pluto-cell:hover > pluto-output > div {
    scrollbar-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.05);
}

/* SCROLLBAR CHROME */

pluto-output > div::-webkit-scrollbar {
    height: 6px;
    background: transparent;
}

pluto-output > div::-webkit-scrollbar-thumb {
    background: transparent;
}

pluto-cell:hover > pluto-output > div::-webkit-scrollbar {
    background: rgba(0, 0, 0, 0.05);
}

pluto-cell:hover > pluto-output > div::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.15);
}

/* CELL INPUT */

pluto-input .CodeMirror {
    height: auto !important;
    width: auto;
    z-index: 20;
    border-bottom-right-radius: 4px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-left: none;
    transition: border 0.15s ease-in-out;
}

pluto-input .CodeMirror-scroll {
    min-height: 0px;
}

pluto-input .CodeMirror-empty {
    color: rgba(0, 0, 0, 0.15);
}

pluto-cell:not(.show_input) > pluto-input {
    display: none;
}

pluto-cell.code_differs > pluto-input > .CodeMirror {
    border: 1px solid hsla(46, 70%, 37%, 0.68);
    border-left: none;
}

pluto-cell.depends_on_disabled_cells > pluto-input .CodeMirror,
pluto-cell.running_disabled > pluto-input .CodeMirror {
    opacity: 0.3;
}

pluto-cell.running_disabled > pluto-input .CodeMirror {
    background-color: rgba(139, 139, 139, 0.25);
}

/* UI */

preamble button,
pluto-cell > button,
pluto-input > button,
pluto-runarea > button,
pluto-shoulder > button,
nav#slide_controls > button {
    position: absolute;
    margin: 0px;
    padding: 1px;
    opacity: 50%;
    border: none;
    background: none;
    cursor: pointer;
    /* color: hsl(204, 86%, 35%); */
    color: black;
    font-family: "Segoe UI Emoji", "Roboto Mono", monospace;
    font-size: 0.75rem;
    z-index: 30;
    /* CodeMirror is 2 */
}

/* CELL SHOULDER */

pluto-shoulder {
    position: absolute;
    /* top: 0px; */
    /* bottom: 0px; */
    left: -2000px;
    width: 2000px;
    cursor: move;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: flex-start;
    /* Add an invisible border around the shoulder, to make it easier to click on. (The are between two cells is divided in two, each half belongs to the closest pluto-cell.) */
    top: calc(0px - 0.5 * var(--pluto-cell-spacing));
    bottom: calc(0px - 0.5 * var(--pluto-cell-spacing));
    border-top: calc(0.5 * var(--pluto-cell-spacing)) solid rgba(0, 0, 0, 0);
    border-bottom: calc(0.5 * var(--pluto-cell-spacing)) solid rgba(0, 0, 0, 0);
}

pluto-shoulder:hover {
    background: rgba(0, 0, 0, 0.05);
    background-clip: padding-box;
}

pluto-shoulder > button {
    flex: 0 0 auto;
    position: sticky;
    top: 0px;
    margin-top: 4px;
    margin-right: 5px;
    padding: 0px 1px;
}

pluto-cell:focus-within > pluto-shoulder > button {
    /* we use padding instead of 4px extra margin to move the eye to the left so that the hitbox becomes grows - you want to be able to double click the button */
    padding-right: 4px;
}

/* pluto-cell.code_folded.inline-output > pluto-shoulder > button {
    margin-top: 3px;
} */

pluto-shoulder > button > span::after {
    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/eye-outline.svg);
}

pluto-cell.code_folded > pluto-shoulder > button > span::after {
    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/eye-off-outline.svg);
}

/* TRAFFIC LIGHT */

pluto-trafficlight {
    /* --patternHeight is derived from the pattern length (16px) div sin(45deg) = 16px * sqrt(2)  */
    --patternHeight: 22.62741699797px;
    box-sizing: content-box;
    margin-right: -1px; /* fix a visual glitch of imperfect alignment */
    width: 4px;
    position: absolute;
    left: -4px;
    top: 0px;
    bottom: 0px;
    pointer-events: none;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    border-left-color: rgba(0, 0, 0, 0.1);
    background: rgba(0, 0, 0, 0.1);
    overflow: hidden;
}

pluto-trafficlight::after {
    content: "";
    /* Calc needs units everywhere to work */
    top: calc(0px - 10 * var(--patternHeight));
    left: 0;
    width: 100%;
    height: calc(100% + 10 * var(--patternHeight));
    position: absolute;
    opacity: 0;
}

/*
 * This class will toggle animation.
 * Other classes will make animation visible with opacity (which is CHEAP?)
 * 
 */
pluto-cell.activate_animation pluto-trafficlight::after {
    animation: 10s linear 0s infinite running scrollbackground;
}
/* ... */

